; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_futex.c_refill_pi_state_cache.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_futex.c_refill_pi_state_cache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.futex_pi_state* }
%struct.futex_pi_state = type { i32, i32, i32*, i32 }

@current = common dso_local global %struct.TYPE_2__* null, align 8
@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@FUTEX_KEY_INIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @refill_pi_state_cache to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @refill_pi_state_cache() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.futex_pi_state*, align 8
  %3 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current, align 8
  %4 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %3, i32 0, i32 0
  %5 = load %struct.futex_pi_state*, %struct.futex_pi_state** %4, align 8
  %6 = call i64 @likely(%struct.futex_pi_state* %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %32

9:                                                ; preds = %0
  %10 = load i32, i32* @GFP_KERNEL, align 4
  %11 = call %struct.futex_pi_state* @kzalloc(i32 24, i32 %10)
  store %struct.futex_pi_state* %11, %struct.futex_pi_state** %2, align 8
  %12 = load %struct.futex_pi_state*, %struct.futex_pi_state** %2, align 8
  %13 = icmp ne %struct.futex_pi_state* %12, null
  br i1 %13, label %17, label %14

14:                                               ; preds = %9
  %15 = load i32, i32* @ENOMEM, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %1, align 4
  br label %32

17:                                               ; preds = %9
  %18 = load %struct.futex_pi_state*, %struct.futex_pi_state** %2, align 8
  %19 = getelementptr inbounds %struct.futex_pi_state, %struct.futex_pi_state* %18, i32 0, i32 3
  %20 = call i32 @INIT_LIST_HEAD(i32* %19)
  %21 = load %struct.futex_pi_state*, %struct.futex_pi_state** %2, align 8
  %22 = getelementptr inbounds %struct.futex_pi_state, %struct.futex_pi_state* %21, i32 0, i32 2
  store i32* null, i32** %22, align 8
  %23 = load %struct.futex_pi_state*, %struct.futex_pi_state** %2, align 8
  %24 = getelementptr inbounds %struct.futex_pi_state, %struct.futex_pi_state* %23, i32 0, i32 1
  %25 = call i32 @atomic_set(i32* %24, i32 1)
  %26 = load i32, i32* @FUTEX_KEY_INIT, align 4
  %27 = load %struct.futex_pi_state*, %struct.futex_pi_state** %2, align 8
  %28 = getelementptr inbounds %struct.futex_pi_state, %struct.futex_pi_state* %27, i32 0, i32 0
  store i32 %26, i32* %28, align 8
  %29 = load %struct.futex_pi_state*, %struct.futex_pi_state** %2, align 8
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current, align 8
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  store %struct.futex_pi_state* %29, %struct.futex_pi_state** %31, align 8
  store i32 0, i32* %1, align 4
  br label %32

32:                                               ; preds = %17, %14, %8
  %33 = load i32, i32* %1, align 4
  ret i32 %33
}

declare dso_local i64 @likely(%struct.futex_pi_state*) #1

declare dso_local %struct.futex_pi_state* @kzalloc(i32, i32) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1

declare dso_local i32 @atomic_set(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
